--- a/AnySqlDataFeed/AnySqlDataFeed.csproj
+++ b/AnySqlDataFeed/AnySqlDataFeed.csproj
@@ -182,10 +182,10 @@
     </Compile>
     <Compile Include="Models\Product.cs" />
     <Compile Include="Modules\AnalyzeRequestModule.cs" />
-    <Compile Include="Modules\meta.cs" />
+    <Compile Include="Modules\EdmxRoot.cs" />
     <Compile Include="Modules\PasswordEncryption.cs" />
     <Compile Include="Modules\Serialization.cs" />
-    <Compile Include="Modules\SimpleWriter.cs" />
+    <Compile Include="Modules\TableDataTest.cs" />
     <Compile Include="Modules\SQL.cs" />
     <Compile Include="Modules\TableList.cs" />
     <Compile Include="Modules\TableListTest.cs" />
