--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../AnySqlDataFeed/packages.config" />
   <repository path="..\AnySqlDataFeed\packages.config" />
   <repository path="..\WebForms4\packages.config" />
 </repositories>
